--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,16 @@
       "type": "image/png"
     },
     {
+      "src": "/appicon.jpg",
+      "sizes": "192x192",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "/appicon.jpg",
+      "sizes": "512x512",
+      "type": "image/jpeg"
+    },
+    {
       "src": "/icon.svg",
       "sizes": "any",
       "type": "image/svg+xml"
